[API Definition tab]: Fixing the topbar width so the buttons don't jump out. Closes #1279

--- a/AzureFunctions.AngularClient/src/app/site/swagger-definition/swagger-definition.component.scss
+++ b/AzureFunctions.AngularClient/src/app/site/swagger-definition/swagger-definition.component.scss
@@ -89,6 +89,7 @@ ul {
 }
 
 .wrapper {
+    min-width: 1030px;
     display: flex;
     flex-direction: column;
 }
@@ -171,7 +172,8 @@ ul {
     margin-right: 15px;
 }
 
-.topbar {
+.topbar {    
+    min-width: 742px;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
